added checkbox in download table to enable/disable downloading of an item